--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="" alt="banner" id="banner">
+    <img src="image/C1hTByd-illuminati-wallpaper.png" alt="banner" id="banner">
+
+    <button onclick="document.getElementById('banner').src='image/wp2132921-new-world-order-wallpapers.jpg'"></button>
 </body>
 </html>
