--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+         img{ width: 100%; height: 70vh;}
+    </style>
 </head>
 <body>
     <img src="image/C1hTByd-illuminati-wallpaper.png" alt="banner" id="banner">
