--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
     <style>
          img{ width: 80%; height: 60vh;}
+         button{
+            width: 20px;
+            height: 10px;
+         }
     </style>
 </head>
 <body>
