--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 <body>
     <img src="image/C1hTByd-illuminati-wallpaper.png" alt="banner" id="banner">
 
-    <button onclick="document.getElementById('banner').src='image/wp2132921-new-world-order-wallpapers.jpg'"></button>
+    <button onclick="document.getElementById('banner').src='image/wp2132921-new-world-order-wallpapers.jpg'">Click Me</button>
 </body>
 </html>
