--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <img src="image/C1hTByd-illuminati-wallpaper.png" alt="banner" id="banner">
+    <img src="image/" alt="banner" id="banner">
 
     <button onclick="document.getElementById('banner').src='image/wp2132921-new-world-order-wallpapers.jpg'">image 1</button>
 </body>
