--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-         img{ width: 80%; height: 60vh;}
+         img{ 
+            width: 80%; 
+            height: 60vh;}
          
     </style>
 </head>
 <body>
-    <img src="image/" alt="banner" id="banner">
+    <img src="image/01.png" alt="banner" id="banner">
 
-    <button onclick="document.getElementById('banner').src='image/wp2132921-new-world-order-wallpapers.jpg'">image 1</button>
+    <button onclick="document.getElementById('banner').src='image/02.jpg'">image 1</button>
 </body>
 </html>
