--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-         img{ 
-            width: 80%; 
+        img{ 
+            width: 100%; 
             height: 60vh;}
          
     </style>
@@ -14,6 +14,10 @@
 <body>
     <img src="image/01.png" alt="banner" id="banner">
 
-    <button onclick="document.getElementById('banner').src='image/02.jpg'">image 1</button>
+    <button onclick="document.getElementById('banner').src='image/02.jpg'">image 2</button>
+    <button onclick="document.getElementById('banner').src='image/03.jpg'">image 3</button>
+    <button onclick="document.getElementById('banner').src='image/04.jpg'">image 4</button>
+    <button onclick="document.getElementById('banner').src='image/05.jpg'">image 5</button>
+    <button onclick="document.getElementById('banner').src='image/01.png'">image 1</button>
 </body>
 </html>
