--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     </style>
 </head>
 <body>
-    <img src="image/01.png" alt="banner" id="banner">
+    <img src="image/02.jpg" alt="banner" id="banner">
 
-    <button onclick="document.getElementById('banner').src='image/02.jpg'">image 2</button>
-    <button onclick="document.getElementById('banner').src='image/03.jpg'">image 3</button>
-    <button onclick="document.getElementById('banner').src='image/04.jpg'">image 4</button>
-    <button onclick="document.getElementById('banner').src='image/05.jpg'">image 5</button>
-    <button onclick="document.getElementById('banner').src='image/01.png'">image 1</button>
+    <!-- <button onclick="document.getElementById('banner').src='image/02.jpg'">image 2</button> -->
+    <button onclick="document.getElementById('banner').src='image/03.jpg'">image 2</button>
+    <button onclick="document.getElementById('banner').src='image/04.jpg'">image 3</button>
+    <button onclick="document.getElementById('banner').src='image/05.jpg'">image 4</button>
+    <!-- <button onclick="document.getElementById('banner').src='image/01.png'">image 1</button> -->
 </body>
 </html>
